--- a/xplayer/build.gradle
+++ b/xplayer/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile project(':vitamio')
     compile project(':VitamioRecorderLibrary')
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    compile 'com.android.support:design:23.0.1'
 }
